--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -124,8 +124,10 @@
     .space-login { margin-top: 160px; }
 
     .space-text-button { margin-top: 10px; }
+    
+     /*
+        Bagian teman Akbar 
 
-     /* 
         Card box CSS
      */ 
 
@@ -168,6 +170,88 @@
         font-size: 15px;
     }
     
+    /*
+        Modal payment 
+    */
+
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+      
+      /* Modal Content */
+      .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+      
+      /* The Close Button */
+      .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+      
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    /* 
+        Form payment 
+    */ 
+
+    input[type=text] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+    }
+
+    /* 
+        Dropdown list
+    */ 
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+      
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 250px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px 16px;
+        z-index: 1;
+    }
+      
+      .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    /*
+        END teman Akbar 
+         
+        Card box CSS
+     */ 
+
     .card-film {
         background-color: #fff;
         border-radius: 0.5rem;
