--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -160,7 +160,7 @@
     }
 
     .button {
-        background-color: blue; /* blue */
+        background-color: red; /* red */
         border: none;
         color: white;
         padding: 15px 32px;
