--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -126,7 +126,7 @@
     .space-text-button { margin-top: 10px; }
     
      /*
-        Bagian teman Akbar 
+        Bagian Faisal 
 
         Card box CSS
      */ 
@@ -247,7 +247,7 @@
     }
 
     /*
-        END teman Akbar 
+        END Faisal 
          
         Card box CSS
      */ 
